fix: input overflow in configuration screen

--- a/style.css
+++ b/style.css
@@ -338,6 +338,7 @@ input {
     color: white;
     font-size: 1.1rem;
     outline: none;
+    width: 100%;
 }
 
 input:focus {
